[package]
name = "talks_game_backend_rust"
version = "0.1.0"
authors = ["Denis Rodionov <zunh@protonmail.com>"]
edition = "2018"

[lib]
name = "talks_game_backend_rust"
path = "src/lib.rs"

[[bin]]
name = "talks_game_server"
path = "src/main.rs"

[dependencies]
argonautica = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
redis = "0.15.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.46"
uuid = { version = "0.8.1", features = ["serde", "v4"] }